--- a/AlgoritmosDeOrdenacao/src/VISAO/MainApp.form
+++ b/AlgoritmosDeOrdenacao/src/VISAO/MainApp.form
@@ -37,7 +37,7 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="AlgBOX" min="-2" pref="235" max="-2" attributes="0"/>
-                              <EmptySpace max="32767" attributes="0"/>
+                              <EmptySpace pref="55" max="32767" attributes="0"/>
                               <Component id="ordemBOX" min="-2" pref="200" max="-2" attributes="0"/>
                           </Group>
                       </Group>
