--- a/AlgoritmosDeOrdenacao/src/VISAO/MainApp.form
+++ b/AlgoritmosDeOrdenacao/src/VISAO/MainApp.form
@@ -39,7 +39,7 @@
                       <Component id="jLabel1" pref="386" max="32767" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <Component id="jTextField2" min="-2" pref="130" max="-2" attributes="0"/>
+                      <Component id="quantTF" min="-2" pref="130" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jLabel2" max="32767" attributes="0"/>
                   </Group>
@@ -73,7 +73,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="quantTF" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="64" max="32767" attributes="0"/>
@@ -124,7 +124,7 @@
         <Property name="text" type="java.lang.String" value="Nome do arquivo de sa&#xed;da"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="quantTF">
       <Properties>
         <Property name="text" type="java.lang.String" value="0"/>
       </Properties>
